insert git username and email into Canary release